jellyfin_stack/sabnzb/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: sabnzbd
  namespace: jellyfin
spec:
  selector:
    app: sabnzbd
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
