jellyfin_stack/sabnzb/traefik.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sabnzbd
  namespace: jellyfin
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`sabnzbd.home.sparhomelab.dev`)
    kind: Rule
    services:
    - name: sabnzbd
      port: 80
    middlewares:
    - name: default-headers-jellyfin
  tls:
    secretName: sabnzbd-tls
